--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
 }
 
 h1, h2 {
@@ -18,7 +18,6 @@ ul {
     padding: 0;
 }
 /*Конец общей стилизации*/
-
 
 main.app {
     max-width: 1080px;
@@ -66,7 +65,8 @@ main.app {
     background-color: #33CC66;
 }
 
-.green:hover {
+.green:hover,
+.green:focus {
     background-color: #1EE494;
 }
 
@@ -78,7 +78,8 @@ main.app {
     background-color: #BE3144;
 }
 
-.red:hover {
+.red:hover,
+.red:focus {
     background-color: #FF3333;
 }
 
@@ -88,11 +89,6 @@ main.app {
 /* Конец стилизации кнопок и их состояний */
 
 /*Секция books*/
-.books {
-    /*transition: .6s;*/
-}
-
-
 /*Строка таблицы*/
 .book {
     padding: 10px 20px;
@@ -107,9 +103,7 @@ main.app {
 }
 
 .book:hover {
-    /*transform: scale(1.05,1.05);*/
     transition: .6s;
-    /*box-shadow: 0 4px 13px 1px rgba(250, 91, 117, 1);*/
 }
 
 .book .description {
@@ -136,6 +130,19 @@ main.app {
     margin-bottom: 5px;
 }
 
+/* Стили для анимации и удаления книги */
+.hidden {
+    display: none !important;  /* Чтобы на маленьких экранах перебить display: block */
+}
+
+.hidden-year {
+    display: none;
+}
+
+.transition {
+    opacity: 0;
+}
+
 /*Контейнер картинки*/
 .image {
     flex: 0 1 200px;
@@ -147,6 +154,7 @@ main.app {
     box-sizing: border-box;
 }
 
+/* Кнопок "Редактировать" и "Удалить" */
 .actions {
     display: -webkit-flex;
     display: -moz-flex;
@@ -161,19 +169,9 @@ main.app {
     margin-bottom: 10px;
 }
 
-
-.hidden {
-    display: none;
-}
-
-.transition {
-    opacity: 0;
-}
-
-
 /* -------- Popup -------- */
 
-.popup-wrapper {
+.popup-wrapper, .popup-delete {
   background: rgba(255, 255, 255, 0.6) none repeat scroll 0 0;
   display: none;
   height: 100%;
@@ -247,7 +245,9 @@ main.app {
     border: 1.1px solid #29B0D9;
 }
 
-#book-year {
+/* Поля для ввода года */
+#book-add-year,
+#book-edit-year{
     max-width: 100px;
     
 }
@@ -270,6 +270,17 @@ main.app {
     margin-right: 10px;
 }
 
+/* Стили для подсказок */
+.warning {
+    font-size: 1.4rem;
+    color: red;
+}
+
+.year-validate {
+    margin-left: 10px;
+    font-size: 1.4rem;
+    color: red;
+}
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
@@ -310,10 +321,9 @@ main.app {
     }
 
     .popup {
-        width: 80%;
+        width: 70%;
     }
 }
-
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 480px) {
@@ -330,18 +340,6 @@ main.app {
     }
 
     .popup {
-        width: 90%;
+        width: 80%;
     }
 }
-
-.warning {
-    font-size: 1.8rem;
-    color: red;
-}
-
-.year-validate {
-    margin-left: 10px;
-    font-size: 1.4rem;
-    color: red;
-}
-
