--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 /* Общая стилизация */
 html {
     font-size: 62.5%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body {
@@ -49,7 +50,10 @@ main.app {
     font-size: 1.6rem;
     outline: none;
     cursor: pointer;
-    border-radius: 4px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px;
+    -webkit-transition: .6s;
+    -o-transition: .6s;
     transition: .6s;
 }
 
@@ -96,13 +100,20 @@ main.app {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    box-shadow: 0 4px 13px 1px rgba(0, 0, 0, 0.09);
+    -webkit-box-shadow: 0 4px 13px 1px rgba(0, 0, 0, 0.09);
+            box-shadow: 0 4px 13px 1px rgba(0, 0, 0, 0.09);
     margin-bottom: 20px;
+    -webkit-transition: all 2s linear;
+    -o-transition: all 2s linear;
     transition: all 2s linear;
 }
 
 .book:hover {
+    -webkit-transition: .6s;
+    -o-transition: .6s;
     transition: .6s;
 }
 
@@ -112,9 +123,18 @@ main.app {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column wrap;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .description h2 {
@@ -145,13 +165,17 @@ main.app {
 
 /*Контейнер картинки*/
 .image {
-    flex: 0 1 200px;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 200px;
+        -ms-flex: 0 1 200px;
+            flex: 0 1 200px;
     margin-right: 50px;
 }
 
 .image img {
     max-width: 80%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 /* Кнопок "Редактировать" и "Удалить" */
@@ -160,9 +184,18 @@ main.app {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column wrap;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .actions .btn:nth-of-type(1) {
@@ -208,7 +241,8 @@ main.app {
     z-index: 1002;
     border: 5px solid #FF3300;
     width: 50%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .popup-inner {
@@ -216,8 +250,14 @@ main.app {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column wrap;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
 }
 
 .popup-inner h2 {
@@ -285,11 +325,17 @@ main.app {
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
     .image {
-        flex: 1 1 250px;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1 1 250px;
+            -ms-flex: 1 1 250px;
+                flex: 1 1 250px;
         margin-right: 30px;
     }
     .description {
-        flex: 1 1 400px;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1 1 400px;
+            -ms-flex: 1 1 400px;
+                flex: 1 1 400px;
     }
 
     .description h2 {
@@ -302,6 +348,8 @@ main.app {
 
     .popup-btns {
         display: block;
+        -webkit-transition: .6s;
+        -o-transition: .6s;
         transition: .6s;
     }
 
@@ -309,6 +357,8 @@ main.app {
         margin-top: 5px;
         width: 100%;
         padding: 10px 20px;
+        -webkit-transition: .6s;
+        -o-transition: .6s;
         transition: .6s;
     }
 
